# onelogger

./: .coverage  .env.example  .gitignore  Command  README.md  README_ja.md  pyproject.toml
docs/: spec.md
examples/: .env  example_color_logger.py  example_color_message.py  example_logger.py
src/onelogger/: logger.py  oneenv_decorator.py
tests/: test_logger.py
